Stucknight fix this

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -721,6 +721,10 @@
   height: 55px !important;
 }
 
+.h65 {
+  height: 65px !important;
+}
+
 .h75 {
   height: 75px !important;
 }
@@ -15436,7 +15440,7 @@ select.sort {
 .modal-popup-body,
 .chat-wrapper,
 .chat-left {
-  height: calc(100vh - 120px);
+  height: calc(90vh - 100px);
 }
 .modal-popup-body::-webkit-scrollbar-track,
 .chat-wrapper::-webkit-scrollbar-track,
